Span which was causing the overflow is now not displayed. Therefore fixing the issue.

--- a/packages/main/src/themes/List.css
+++ b/packages/main/src/themes/List.css
@@ -35,10 +35,6 @@
 	z-index: 1;
 }
 
-:host([non-scrollable]) .ui5-list-scroll-container {
-	overflow: hidden;
-}
-
 .ui5-list-root {
 	width: 100%;
 	height: 100%;
